try to solve the img container overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  overflow: hidden;
   margin: 0;
   padding-right: 0 !important;
 
